crates/ty_python_semantic/resources/mdtest/snapshots/unsupported_base_dyn…_-_Unsupported_base_for…_-_Enum_base_(4873196c8b48364).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: unsupported_base_dynamic_type.md - Unsupported base for dynamic `type()` classes - Enum base
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unsupported_base_dynamic_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | from enum import Enum
2 | 
3 | class MyEnum(Enum):
4 |     pass
5 | 
6 | X = type("X", (MyEnum,), {})  # error: [unsupported-base]
```

# Diagnostics

```
warning[unsupported-base]: Invalid base for class created via `type()`
 --> src/mdtest_snippet.py:6:16
  |
4 |     pass
5 |
6 | X = type("X", (MyEnum,), {})  # error: [unsupported-base]
  |                ^^^^^^ Has type `<class 'MyEnum'>`
  |
info: Creating an enum class via `type()` is not supported
info: Consider using `class X(...): ...` instead
info: rule `unsupported-base` is enabled by default

```
